# PlanarManipulator

./: .gitignore  CMakeLists.txt  README.md
docs/: Instructions.txt  Report.txt
include/: InverseKinematics.h  Joint.h  Link.h  Manipulator.h  Transformation.h
src/: InverseKinematics.cpp  Joint.cpp  Manipulator.cpp  main.cpp
tests/: ForwardKinematicsTest.cpp  IntersectionTest.cpp  InverseKinematicsTest.cpp  ManipulatorTest.cpp
